--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-type": "^19.6.0",
     "jsonwebtoken": "^9.0.2",
+    "load-esm": "^1.0.0",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
     "mongoose": "^8.3.2",
