--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "file-type": "^19.6.0",
     "jsonwebtoken": "^9.0.2",
     "load-esm": "^1.0.0",
